refactor: remove static_files.to_settings() and add edge feature to RocksDB flags
This PR addresses the review comment from #21191:

- Remove `StaticFilesArgs::to_settings()` - superseded by `NodeConfig::storage_settings()`
- Add edge feature behavior to RocksDB flags - flags default to `true` when `edge` feature is enabled
- Add `RocksDbArgs` to `EnvironmentArgs` with `storage_settings()` method
- Update `storage_settings()` to use `StorageSettings::edge()` or `StorageSettings::legacy()` base
- Replace `static_files.to_settings()` calls with `storage_settings()` in launch/common.rs

--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -904,18 +904,27 @@ RocksDB:
           This enables `RocksDB` for `tx-hash`, `storages-history`, and `account-history` tables. Cannot be combined with individual flags set to false.
 
       --rocksdb.tx-hash <TX_HASH>
-          Route tx hash -> number table to `RocksDB` instead of MDBX
+          Route tx hash -> number table to `RocksDB` instead of MDBX.
 
+          This is a genesis-initialization-only flag: changing it after genesis requires a re-sync. Defaults to `true` when the `edge` feature is enabled, `false` otherwise.
+
+          [default: false]
           [possible values: true, false]
 
       --rocksdb.storages-history <STORAGES_HISTORY>
-          Route storages history tables to `RocksDB` instead of MDBX
+          Route storages history tables to `RocksDB` instead of MDBX.
 
+          This is a genesis-initialization-only flag: changing it after genesis requires a re-sync. Defaults to `true` when the `edge` feature is enabled, `false` otherwise.
+
+          [default: false]
           [possible values: true, false]
 
       --rocksdb.account-history <ACCOUNT_HISTORY>
-          Route account history tables to `RocksDB` instead of MDBX
+          Route account history tables to `RocksDB` instead of MDBX.
 
+          This is a genesis-initialization-only flag: changing it after genesis requires a re-sync. Defaults to `true` when the `edge` feature is enabled, `false` otherwise.
+
+          [default: false]
           [possible values: true, false]
 
 Engine:
