--- a/docs/vocs/docs/pages/cli/reth/db.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db.mdx
@@ -157,12 +157,15 @@ Static Files:
           [default: false]
           [possible values: true, false]
 
-      --static-files.storage-change-sets
+      --static-files.storage-change-sets <STORAGE_CHANGESETS>
           Store storage changesets in static files.
 
           When enabled, storage changesets will be written to static files on disk instead of the database.
 
           Note: This setting can only be configured at genesis initialization. Once the node has been initialized, changing this flag requires re-syncing from scratch.
+
+          [default: false]
+          [possible values: true, false]
 
 RocksDB:
       --rocksdb.all
