refactor(cli): make discovery_secret a positional argument
Changes the enode command to accept the secret key path as a positional
argument instead of a named --discovery-secret flag, improving CLI ergonomics.

--- a/docs/vocs/docs/pages/cli/reth/p2p/enode.mdx
+++ b/docs/vocs/docs/pages/cli/reth/p2p/enode.mdx
@@ -6,12 +6,13 @@ Print enode identifier
 $ reth p2p enode --help
 ```
 ```txt
-Usage: reth p2p enode [OPTIONS] --discovery-secret <PATH>
+Usage: reth p2p enode [OPTIONS] <DISCOVERY_SECRET>
 
-Options:
-      --discovery-secret <PATH>
+Arguments:
+  <DISCOVERY_SECRET>
           Path to the secret key file for discovery
 
+Options:
       --ip <IP>
           Optional IP address to include in the enode URL.
 
