--- a/docs/vocs/docs/pages/cli/op-reth/p2p/enode.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/p2p/enode.mdx
@@ -6,12 +6,13 @@ Print enode identifier
 $ op-reth p2p enode --help
 ```
 ```txt
-Usage: op-reth p2p enode [OPTIONS] --discovery-secret <PATH>
+Usage: op-reth p2p enode [OPTIONS] <DISCOVERY_SECRET>
 
-Options:
-      --discovery-secret <PATH>
+Arguments:
+  <DISCOVERY_SECRET>
           Path to the secret key file for discovery
 
+Options:
       --ip <IP>
           Optional IP address to include in the enode URL.
 
