--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -9,6 +9,7 @@
     - [`reth db`](./reth/db.mdx)
       - [`reth db stats`](./reth/db/stats.mdx)
       - [`reth db list`](./reth/db/list.mdx)
+        - [`reth db list mdbx`](./reth/db/list/mdbx.mdx)
       - [`reth db checksum`](./reth/db/checksum.mdx)
         - [`reth db checksum mdbx`](./reth/db/checksum/mdbx.mdx)
         - [`reth db checksum static-file`](./reth/db/checksum/static-file.mdx)
@@ -69,6 +70,7 @@
     - [`op-reth db`](./op-reth/db.mdx)
       - [`op-reth db stats`](./op-reth/db/stats.mdx)
       - [`op-reth db list`](./op-reth/db/list.mdx)
+        - [`op-reth db list mdbx`](./op-reth/db/list/mdbx.mdx)
       - [`op-reth db checksum`](./op-reth/db/checksum.mdx)
         - [`op-reth db checksum mdbx`](./op-reth/db/checksum/mdbx.mdx)
         - [`op-reth db checksum static-file`](./op-reth/db/checksum/static-file.mdx)
