--- a/docs/vocs/docs/pages/cli/op-reth/db/list.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/list.mdx
@@ -6,55 +6,13 @@ Lists the contents of a table
 $ op-reth db list --help
 ```
 ```txt
-Usage: op-reth db list [OPTIONS] <TABLE>
+Usage: op-reth db list [OPTIONS] <COMMAND>
 
-Arguments:
-  <TABLE>
-          The table name
+Commands:
+  mdbx
+  help  Print this message or the help of the given subcommand(s)
 
 Options:
-  -s, --skip <SKIP>
-          Skip first N entries
-
-          [default: 0]
-
-  -r, --reverse
-          Reverse the order of the entries. If enabled last table entries are read
-
-  -l, --len <LEN>
-          How many items to take from the walker
-
-          [default: 5]
-
-      --search <SEARCH>
-          Search parameter for both keys and values. Prefix it with `0x` to search for binary data, and text otherwise.
-
-          ATTENTION! For compressed tables (`Transactions` and `Receipts`), there might be missing results since the search uses the raw uncompressed value from the database.
-
-      --min-row-size <MIN_ROW_SIZE>
-          Minimum size of row in bytes
-
-          [default: 0]
-
-      --min-key-size <MIN_KEY_SIZE>
-          Minimum size of key in bytes
-
-          [default: 0]
-
-      --min-value-size <MIN_VALUE_SIZE>
-          Minimum size of value in bytes
-
-          [default: 0]
-
-  -c, --count
-          Returns the number of rows found
-
-  -j, --json
-          Dump as JSON instead of using TUI
-
-      --raw
-          Output bytes instead of human-readable decoded value
-
   -h, --help
           Print help (see a summary with '-h')
 
