--- a/docs/vocs/docs/pages/cli/op-reth/db/list/mdbx.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/list/mdbx.mdx
@@ -1,18 +1,48 @@
-# reth db list
+# op-reth db list mdbx
 
-Lists the contents of a table
+
 
 ```bash
-$ reth db list --help
+$ op-reth db list mdbx --help
 ```
 ```txt
-Usage: reth db list [OPTIONS] <COMMAND>
+Usage: op-reth db list mdbx [OPTIONS] <TABLE>
 
-Commands:
-  mdbx
-  help  Print this message or the help of the given subcommand(s)
+Arguments:
+  <TABLE>
+
 
 Options:
+  -s, --skip <SKIP>
+          [default: 0]
+
+  -r, --reverse
+
+
+  -l, --len <LEN>
+          [default: 5]
+
+      --search <SEARCH>
+
+
+      --min-row-size <MIN_ROW_SIZE>
+          [default: 0]
+
+      --min-key-size <MIN_KEY_SIZE>
+          [default: 0]
+
+      --min-value-size <MIN_VALUE_SIZE>
+          [default: 0]
+
+  -c, --count
+
+
+  -j, --json
+
+
+      --raw
+
+
   -h, --help
           Print help (see a summary with '-h')
 
@@ -22,9 +52,9 @@ Datadir:
           Possible values are either a built-in chain or the path to a chain specification file.
 
           Built-in chains:
-              mainnet, sepolia, holesky, hoodi, dev
+              optimism, optimism_sepolia, optimism-sepolia, base, base_sepolia, base-sepolia, arena-z, arena-z-sepolia, automata, base-devnet-0-sepolia-dev-0, bob, boba-sepolia, boba, camp-sepolia, celo, creator-chain-testnet-sepolia, cyber, cyber-sepolia, ethernity, ethernity-sepolia, fraxtal, funki, funki-sepolia, hashkeychain, ink, ink-sepolia, lisk, lisk-sepolia, lyra, metal, metal-sepolia, mint, mode, mode-sepolia, oplabs-devnet-0-sepolia-dev-0, orderly, ozean-sepolia, pivotal-sepolia, polynomial, race, race-sepolia, radius_testnet-sepolia, redstone, rehearsal-0-bn-0-rehearsal-0-bn, rehearsal-0-bn-1-rehearsal-0-bn, settlus-mainnet, settlus-sepolia-sepolia, shape, shape-sepolia, silent-data-mainnet, snax, soneium, soneium-minato-sepolia, sseed, swan, swell, tbn, tbn-sepolia, unichain, unichain-sepolia, worldchain, worldchain-sepolia, xterio-eth, zora, zora-sepolia, dev
 
-          [default: mainnet]
+          [default: optimism]
 
 Logging:
       --log.stdout.format <FORMAT>
