--- a/docs/vocs/docs/pages/cli/reth/db/checksum/rocksdb.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/checksum/rocksdb.mdx
@@ -1,20 +1,26 @@
-# reth db checksum
+# reth db checksum rocksdb
 
-Calculates the content checksum of a table or static file segment
+Calculates the checksum of a RocksDB table
 
 ```bash
-$ reth db checksum --help
+$ reth db checksum rocksdb --help
 ```
 ```txt
-Usage: reth db checksum [OPTIONS] <COMMAND>
+Usage: reth db checksum rocksdb [OPTIONS] <TABLE>
 
-Commands:
-  mdbx         Calculates the checksum of a database table
-  static-file  Calculates the checksum of a static file segment
-  rocksdb      Calculates the checksum of a RocksDB table
-  help         Print this message or the help of the given subcommand(s)
+Arguments:
+  <TABLE>
+          The RocksDB table
+
+          Possible values:
+          - transaction-hash-numbers: Transaction hash to transaction number mapping
+          - accounts-history:         Account history indices
+          - storages-history:         Storage history indices
 
 Options:
+      --limit <LIMIT>
+          The maximum number of records to checksum
+
   -h, --help
           Print help (see a summary with '-h')
 
