--- a/docs/vocs/docs/pages/sdk/examples/standalone-components.mdx
+++ b/docs/vocs/docs/pages/sdk/examples/standalone-components.mdx
@@ -77,13 +77,15 @@ let factory = EthereumNode::provider_factory_builder()
 
 ### Real-time Block Access Configuration
 
-Reth buffers new blocks in memory before persisting them to disk for performance optimization. If your external process needs immediate access to the latest blocks, configure the node to persist blocks immediately:
+By default, Reth buffers 2 blocks in memory before persisting to disk. External readers will see data lagging by ~2 blocks.
 
-- `--engine.persistence-threshold 0` - Persists new canonical blocks to disk immediately
+For immediate persistence:
 
-Using this flag ensures external processes can read new blocks without delay.
+```bash
+reth node --engine.persistence-threshold 0
+```
 
-As soon as the reth process has persisted the block data, the external reader can read it from the database.
+This increases disk I/O but makes blocks visible immediately. See [`example-engine-persistence-threshold`](https://github.com/paradigmxyz/reth/tree/main/examples/engine-persistence-threshold) for a demonstration.
 
 ## Next Steps
 
