--- a/docs/vocs/docs/pages/cli/reth/init-state.mdx
+++ b/docs/vocs/docs/pages/cli/reth/init-state.mdx
@@ -195,7 +195,7 @@ Storage:
       --without-evm
           Specifies whether to initialize the state without relying on EVM historical data.
 
-          When enabled, and before inserting the state, it creates a dummy chain up to the last EVM block specified. It then, appends the first block provided block.
+          When enabled, and before inserting the state, it creates a dummy chain up to the last EVM block specified. It then appends the first provided block.
 
           - **Note**: **Do not** import receipts and blocks beforehand, or this will fail or be ignored.
 
