chore: make update-book-cli

--- a/docs/vocs/docs/pages/cli/reth/stage/drop.mdx
+++ b/docs/vocs/docs/pages/cli/reth/stage/drop.mdx
@@ -206,6 +206,38 @@ Storage:
 
           WARNING: Changing this setting on an existing database requires a full resync.
 
+      --storage.receipts-in-static-files <RECEIPTS_IN_STATIC_FILES>
+          Store receipts in static files instead of the database.
+
+          This is enabled by default for new nodes. Existing nodes continue using their current storage location unless migrated.
+
+          [possible values: true, false]
+
+      --storage.transaction-senders-in-static-files <TRANSACTION_SENDERS_IN_STATIC_FILES>
+          Store transaction senders in static files instead of the database
+
+          [possible values: true, false]
+
+      --storage.account-changesets-in-static-files <ACCOUNT_CHANGESETS_IN_STATIC_FILES>
+          Store account changesets in static files instead of the database
+
+          [possible values: true, false]
+
+      --storage.storages-history-in-rocksdb <STORAGES_HISTORY_IN_ROCKSDB>
+          Store storage history in `RocksDB` instead of MDBX
+
+          [possible values: true, false]
+
+      --storage.transaction-hash-numbers-in-rocksdb <TRANSACTION_HASH_NUMBERS_IN_ROCKSDB>
+          Store transaction hash to number mapping in `RocksDB` instead of MDBX
+
+          [possible values: true, false]
+
+      --storage.account-history-in-rocksdb <ACCOUNT_HISTORY_IN_ROCKSDB>
+          Store account history in `RocksDB` instead of MDBX
+
+          [possible values: true, false]
+
   <STAGE>
           Possible values:
           - headers:         The headers stage within the pipeline
