feat(storage): add use_hashed_state storage setting

--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -37,6 +37,7 @@
           - [`reth db settings set transaction_hash_numbers`](./reth/db/settings/set/transaction_hash_numbers.mdx)
           - [`reth db settings set account_history`](./reth/db/settings/set/account_history.mdx)
           - [`reth db settings set storage_changesets`](./reth/db/settings/set/storage_changesets.mdx)
+          - [`reth db settings set use_hashed_state`](./reth/db/settings/set/use_hashed_state.mdx)
       - [`reth db account-storage`](./reth/db/account-storage.mdx)
       - [`reth db state`](./reth/db/state.mdx)
     - [`reth download`](./reth/download.mdx)
