--- a/docs/vocs/docs/pages/cli/reth/db/settings/set/use_hashed_state.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/settings/set/use_hashed_state.mdx
@@ -1,23 +1,16 @@
-# reth db settings set
+# reth db settings set use_hashed_state
 
-Set storage settings in database
+Use hashed state tables (HashedAccounts/HashedStorages) as canonical state
 
 ```bash
-$ reth db settings set --help
+$ reth db settings set use_hashed_state --help
 ```
 ```txt
-Usage: reth db settings set [OPTIONS] <COMMAND>
+Usage: reth db settings set use_hashed_state [OPTIONS] <VALUE>
 
-Commands:
-  receipts                  Store receipts in static files instead of the database
-  transaction_senders       Store transaction senders in static files instead of the database
-  account_changesets        Store account changesets in static files instead of the database
-  storages_history          Store storage history in rocksdb instead of MDBX
-  transaction_hash_numbers  Store transaction hash to number mapping in rocksdb instead of MDBX
-  account_history           Store account history in rocksdb instead of MDBX
-  storage_changesets        Store storage changesets in static files instead of the database
-  use_hashed_state          Use hashed state tables (HashedAccounts/HashedStorages) as canonical state
-  help                      Print this message or the help of the given subcommand(s)
+Arguments:
+  <VALUE>
+          [possible values: true, false]
 
 Options:
   -h, --help
