fix(cli): address review feedback for db list range query
- Fix reverse iteration: use end_key as seek position for walk_back()
  and add start_key lower bound check, so --start-key 1000 --end-key 2000
  --reverse correctly walks from 2000 backwards to 1000
- Validate start_key < end_key when both are provided, returning a clear
  error instead of silently producing empty results
- Clarify that --skip is relative to the seek position when used with
  --start-key, and document --reverse interaction with range boundaries
- Replace end_key.clone() with end_key.as_ref() to avoid unnecessary
  heap allocation in the filter closure

--- a/docs/vocs/docs/pages/cli/op-reth/db/list.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/list.mdx
@@ -14,7 +14,7 @@ Arguments:
 
 Options:
   -s, --skip <SKIP>
-          Skip first N entries
+          Skip first N entries. When used with --start-key, skips relative to the seek position rather than the table start
 
           [default: 0]
 
@@ -56,10 +56,10 @@ Options:
           Output bytes instead of human-readable decoded value
 
       --start-key <START_KEY>
-          Start key for range query (inclusive). The query will start from this key using O(log n) seek instead of scanning from the beginning. Format: JSON value matching the table's key type. Examples: `123` for numeric keys, `"0xabc..."` for hash keys
+          Start key for range query (inclusive). Defines the lower bound of the range. The query will seek to this key using O(log n) instead of scanning from the beginning. When used with --reverse, iteration goes from end-key (or table end) backwards to this key. Format: JSON value matching the table's key type. Examples: `123` for numeric keys, `"0xabc..."` for hash keys
 
       --end-key <END_KEY>
-          End key for range query (exclusive). The query will stop before this key. Format: JSON value matching the table's key type
+          End key for range query (exclusive). Defines the upper bound of the range. When used with --reverse, this key is the starting point for backward iteration. Format: JSON value matching the table's key type
 
   -h, --help
           Print help (see a summary with '-h')
