--- a/docs/vocs/docs/pages/cli/reth/db/list.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/list.mdx
@@ -14,7 +14,7 @@ Arguments:
 
 Options:
   -s, --skip <SKIP>
-          Skip first N entries
+          Skip first N entries. When used with --start-key, skips relative to the seek position rather than the table start
 
           [default: 0]
 
@@ -56,10 +56,10 @@ Options:
           Output bytes instead of human-readable decoded value
 
       --start-key <START_KEY>
-          Start key for range query (inclusive). The query will start from this key using O(log n) seek instead of scanning from the beginning. Format: JSON value matching the table's key type. Examples: `123` for numeric keys, `"0xabc..."` for hash keys
+          Start key for range query (inclusive). Defines the lower bound of the range. The query will seek to this key using O(log n) instead of scanning from the beginning. When used with --reverse, iteration goes from end-key (or table end) backwards to this key. Format: JSON value matching the table's key type. Examples: `123` for numeric keys, `"0xabc..."` for hash keys
 
       --end-key <END_KEY>
-          End key for range query (exclusive). The query will stop before this key. Format: JSON value matching the table's key type
+          End key for range query (exclusive). Defines the upper bound of the range. When used with --reverse, this key is the starting point for backward iteration. Format: JSON value matching the table's key type
 
   -h, --help
           Print help (see a summary with '-h')
