--- a/docs/vocs/docs/pages/cli/reth/db/stats.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/stats.mdx
@@ -13,7 +13,7 @@ Options:
           Skip consistency checks for static files
 
       --detailed-sizes
-          Show only the total size for static files
+          Show detailed size breakdown (data, index, offsets, config) for static files
 
       --detailed-segments
           Show detailed information per static file segment
